# LearnTrajDep

./: demo_3d.py  pyproject.toml
utils/: data_utils.py  forward_kinematics.py  viz.py
